--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
+
 <html>
     <head>
         <script src="./script.js"></script>
     </head>
-    <h1>Version 1.7</h1>
+    <h1>Version 1.8</h1>
     <canvas id="myCanvas" width="400" height="600" style="border: 5px solid #000000;"></canvas>
 
     <br>
