--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <script src="./script.js"></script>
     </head>
-    <h1>Version 1.8</h1>
+    <h1>Version 1.9</h1>
     <canvas id="myCanvas" width="400" height="600" style="border: 5px solid #000000;"></canvas>
 
     <br>
@@ -12,5 +12,5 @@
     <input type="text" id="username" name="username" value="Insert name here"><br>
     
     <input type="submit" value="Submit" onclick="WriteInCanvas()">
-    <div id="demo"></div>
+    <h1 id="demo"></h1>
 </html>
