--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Version 2.3</h1>
+    <h1>Version 2.4</h1>
     <canvas id="myCanvas" width="200" height="300" style="border: 5px solid #000000;"></canvas>
 
     <br>
@@ -22,7 +22,7 @@
     <p id="demo"></p>
 
     
-    <button onclick="SendToCodeBehind('ole', false, 'jensen')">Click me</button>
+    <button onclick="SendToCodeBehind('ole', 'false', 'jensen')">Click me</button>
 
 
 <script>
